tests/out/error/redef/redef.in.bt
const foo := 1

static foo := true

fun foo(a string) {
	// Note: The checker exits after toplevel redefinition errors.
	//   Thus the next line is not checked.
	_ := nonexistent
}

fun foo(c i32, d i32) i32 {
	return 0
}

fun foo[X](x X) {}


static MyCapName := 1
struct MyCapName{}
